--- a/assets/scss/abstract/_colors.scss
+++ b/assets/scss/abstract/_colors.scss
@@ -1,16 +1,12 @@
 // Colors
 $colors: (
   // Main Colors
-        primary-color: (
-                'star-dust': #f9f3dd,
-                'crackled': #f2e7d1,
-                'neon-spring': #3ffd6a,
-                'iris-royale': #591b98,
-                'fading-horizon': #442266,
-                'election-night': #110320,
+        main-color: (
+                'brown': #d5966c,
+                'grey': #444444,
         ),
   // Other
-        'background': #fafafa,
+        'background': #ffffff,
         'white': #ffffff,
-        'black': #000000,
+        'black': #151515,
 );
