Finished mobile page.

--- a/assets/scss/base/_font-face.scss
+++ b/assets/scss/base/_font-face.scss
@@ -2,3 +2,8 @@
   font-family: 'Big Shoulders Display';
   src: url('../fonts/BigShouldersDisplay-VariableFont_wght.ttf');
 }
+
+@font-face {
+  font-family: 'Outfit';
+  src: url('../fonts/Outfit-VariableFont_wght.ttf');
+}
