--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,191 @@
-*,*::before,*::after{box-sizing:border-box;margin:0;padding:0}body,h1,h2,h3,h4,p,figure,blockquote,dl,dd{margin-block-end:0}body{min-height:100vh;-webkit-font-smoothing:antialiased}h1,h2,h3,h5,h4,h6{text-wrap:balance}p{text-wrap:pretty}img,picture{max-width:100%;display:block}input,button,textarea,select{font:inherit}textarea:not([rows]){min-height:10em}:has(:target){scroll-behavior:smooth;scroll-padding-top:3rem}:root{--clr-primary-color-star-dust: #f9f3dd;--clr-primary-color-crackled: #f2e7d1;--clr-primary-color-neon-spring: #3ffd6a;--clr-primary-color-iris-royale: #591b98;--clr-primary-color-fading-horizon: #442266;--clr-primary-color-election-night: #110320;--clr-background: #fafafa;--clr-white: #ffffff;--clr-black: #000000}.sr-only:not(:focus):not(:active){clip:rect(0 0 0 0);clip-path:inset(50%);height:1px;overflow:hidden;position:absolute;white-space:nowrap;width:1px}/*# sourceMappingURL=main.css.map */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body, h1, h2, h3, h4, p,
+figure, blockquote, dl, dd {
+  margin-block-end: 0;
+}
+
+body {
+  min-height: 100vh;
+  -webkit-font-smoothing: antialiased;
+}
+
+h1, h2, h3,
+h5, h4, h6 {
+  text-wrap: balance;
+}
+
+p {
+  text-wrap: pretty;
+}
+
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+input, button,
+textarea, select {
+  font: inherit;
+}
+
+textarea:not([rows]) {
+  min-height: 10em;
+}
+
+:has(:target) {
+  scroll-behavior: smooth;
+  scroll-padding-top: 3rem;
+}
+
+:root {
+  --clr-main-color-brown: #d5966c;
+  --clr-main-color-grey: #444444;
+  --clr-background: #ffffff;
+  --clr-white: #ffffff;
+  --clr-black: #151515;
+}
+
+body {
+  background-color: var(--clr-white);
+}
+
+@font-face {
+  font-family: "Big Shoulders Display";
+  src: url("../fonts/BigShouldersDisplay-VariableFont_wght.ttf");
+}
+@font-face {
+  font-family: "Outfit";
+  src: url("../fonts/Outfit-VariableFont_wght.ttf");
+}
+h1, h2, h3, h4,
+h5, h6, a {
+  font-family: "Big Shoulders Display", sans-serif;
+  color: var(--clr-black);
+}
+
+h1 {
+  font-size: 3.75rem;
+  font-weight: 900;
+  line-height: 0.9;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 3.125rem;
+  font-weight: 900;
+  line-height: 0.9;
+  text-transform: uppercase;
+}
+
+p {
+  font-family: "Outfit", sans-serif;
+  font-size: 1.125rem;
+  font-weight: 300;
+  line-height: 1.5;
+}
+
+a {
+  font-size: 1.5rem;
+}
+
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.home-page {
+  display: grid;
+  gap: 7.5rem;
+}
+.home-page__content {
+  display: grid;
+  gap: 7.5rem;
+}
+.home-page__grid {
+  display: grid;
+  grid-template-areas:  'header' 'image1' 'text1' 'image2' 'image3' 'text2';
+  gap: 1.5rem;
+  padding: 1rem;
+}
+.home-page__grid > :nth-child(1) {
+  grid-area: header;
+}
+.home-page__grid > :nth-child(2) {
+  grid-area: image1;
+}
+.home-page__grid > :nth-child(3) {
+  grid-area: text1;
+}
+.home-page__grid > :nth-child(4) {
+  grid-area: image2;
+}
+.home-page__grid > :nth-child(5) {
+  grid-area: image3;
+}
+.home-page__grid > :nth-child(6) {
+  grid-area: text2;
+}
+.home-page__grid-text {
+  display: grid;
+  gap: 1.5rem;
+}
+
+.hero {
+  display: grid;
+  gap: 2rem;
+}
+.hero__text {
+  display: grid;
+  gap: 1rem;
+  padding: 0 1rem;
+}
+.hero__right-column {
+  display: grid;
+  gap: 2rem;
+  justify-items: flex-start;
+}
+
+.button {
+  display: inline-flex;
+  gap: 1rem;
+  align-items: center;
+  justify-items: center;
+  padding: 1.5rem 2rem;
+  color: var(--clr-white);
+  background-color: var(--clr-black);
+}
+
+.footer {
+  background-color: var(--clr-black);
+  color: var(--clr-white);
+}
+.footer__content {
+  display: grid;
+  gap: 2.25rem;
+  padding: 3rem 2rem;
+}
+.footer__socials {
+  display: flex;
+  gap: 1rem;
+}
+.footer__socials > * {
+  color: var(--clr-white);
+}
+.footer__socials > *:hover {
+  color: var(--clr-main-color-brown);
+}
+
+/*# sourceMappingURL=main.css.map */
