--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,191 +1,1 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body, h1, h2, h3, h4, p,
-figure, blockquote, dl, dd {
-  margin-block-end: 0;
-}
-
-body {
-  min-height: 100vh;
-  -webkit-font-smoothing: antialiased;
-}
-
-h1, h2, h3,
-h5, h4, h6 {
-  text-wrap: balance;
-}
-
-p {
-  text-wrap: pretty;
-}
-
-img,
-picture {
-  max-width: 100%;
-  display: block;
-}
-
-input, button,
-textarea, select {
-  font: inherit;
-}
-
-textarea:not([rows]) {
-  min-height: 10em;
-}
-
-:has(:target) {
-  scroll-behavior: smooth;
-  scroll-padding-top: 3rem;
-}
-
-:root {
-  --clr-main-color-brown: #d5966c;
-  --clr-main-color-grey: #444444;
-  --clr-background: #ffffff;
-  --clr-white: #ffffff;
-  --clr-black: #151515;
-}
-
-body {
-  background-color: var(--clr-white);
-}
-
-@font-face {
-  font-family: "Big Shoulders Display";
-  src: url("../fonts/BigShouldersDisplay-VariableFont_wght.ttf");
-}
-@font-face {
-  font-family: "Outfit";
-  src: url("../fonts/Outfit-VariableFont_wght.ttf");
-}
-h1, h2, h3, h4,
-h5, h6, a {
-  font-family: "Big Shoulders Display", sans-serif;
-  color: var(--clr-black);
-}
-
-h1 {
-  font-size: 3.75rem;
-  font-weight: 900;
-  line-height: 0.9;
-  text-transform: uppercase;
-}
-
-h2 {
-  font-size: 3.125rem;
-  font-weight: 900;
-  line-height: 0.9;
-  text-transform: uppercase;
-}
-
-p {
-  font-family: "Outfit", sans-serif;
-  font-size: 1.125rem;
-  font-weight: 300;
-  line-height: 1.5;
-}
-
-a {
-  font-size: 1.5rem;
-}
-
-.sr-only:not(:focus):not(:active) {
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-}
-
-.home-page {
-  display: grid;
-  gap: 7.5rem;
-}
-.home-page__content {
-  display: grid;
-  gap: 7.5rem;
-}
-.home-page__grid {
-  display: grid;
-  grid-template-areas:  'header' 'image1' 'text1' 'image2' 'image3' 'text2';
-  gap: 1.5rem;
-  padding: 1rem;
-}
-.home-page__grid > :nth-child(1) {
-  grid-area: header;
-}
-.home-page__grid > :nth-child(2) {
-  grid-area: image1;
-}
-.home-page__grid > :nth-child(3) {
-  grid-area: text1;
-}
-.home-page__grid > :nth-child(4) {
-  grid-area: image2;
-}
-.home-page__grid > :nth-child(5) {
-  grid-area: image3;
-}
-.home-page__grid > :nth-child(6) {
-  grid-area: text2;
-}
-.home-page__grid-text {
-  display: grid;
-  gap: 1.5rem;
-}
-
-.hero {
-  display: grid;
-  gap: 2rem;
-}
-.hero__text {
-  display: grid;
-  gap: 1rem;
-  padding: 0 1rem;
-}
-.hero__right-column {
-  display: grid;
-  gap: 2rem;
-  justify-items: flex-start;
-}
-
-.button {
-  display: inline-flex;
-  gap: 1rem;
-  align-items: center;
-  justify-items: center;
-  padding: 1.5rem 2rem;
-  color: var(--clr-white);
-  background-color: var(--clr-black);
-}
-
-.footer {
-  background-color: var(--clr-black);
-  color: var(--clr-white);
-}
-.footer__content {
-  display: grid;
-  gap: 2.25rem;
-  padding: 3rem 2rem;
-}
-.footer__socials {
-  display: flex;
-  gap: 1rem;
-}
-.footer__socials > * {
-  color: var(--clr-white);
-}
-.footer__socials > *:hover {
-  color: var(--clr-main-color-brown);
-}
-
-/*# sourceMappingURL=main.css.map */
+*,*::before,*::after{box-sizing:border-box;margin:0;padding:0}body,h1,h2,h3,h4,p,figure,blockquote,dl,dd{margin-block-end:0}body{min-height:100vh;-webkit-font-smoothing:antialiased}h1,h2,h3,h5,h4,h6{text-wrap:balance}p{text-wrap:pretty}img,picture{max-width:100%;display:block}input,button,textarea,select{font:inherit}textarea:not([rows]){min-height:10em}:has(:target){scroll-behavior:smooth;scroll-padding-top:3rem}:root{--clr-main-color-brown: #d5966c;--clr-main-color-grey: #444444;--clr-background: #ffffff;--clr-white: #ffffff;--clr-black: #151515}body{background-color:var(--clr-white)}@font-face{font-family:"Big Shoulders Display";src:url("../fonts/BigShouldersDisplay-VariableFont_wght.ttf")}@font-face{font-family:"Outfit";src:url("../fonts/Outfit-VariableFont_wght.ttf")}h1,h2,h3,h4,h5,h6,a{font-family:"Big Shoulders Display",sans-serif;color:var(--clr-black)}h1{font-size:3.75rem;font-weight:900;line-height:.9;text-transform:uppercase}@media(min-width: 48rem){h1{font-size:4.375rem}}@media(min-width: 80rem){h1{font-size:6rem}}h2{font-size:3.125rem;font-weight:900;line-height:.9;text-transform:uppercase}@media(min-width: 48rem){h2{font-size:3.125rem}}@media(min-width: 80rem){h2{font-size:3.75rem}}h3{font-size:2rem;font-weight:900;line-height:.9;text-transform:uppercase;color:var(--clr-main-color-brown)}@media(min-width: 80rem){h3{font-size:2.25rem}}p{font-family:"Outfit",sans-serif;font-size:1.125rem;font-weight:300;line-height:1.5}@media(min-width: 80rem){p{font-size:1.375rem}}a{font-size:1.25rem;font-weight:700;letter-spacing:.22725rem;text-transform:uppercase;text-decoration:none}address{font-style:normal}.sr-only:not(:focus):not(:active){clip:rect(0 0 0 0);clip-path:inset(50%);height:1px;overflow:hidden;position:absolute;white-space:nowrap;width:1px}.home-page{display:grid;gap:7.5rem;justify-items:center}.home-page__content{display:grid;gap:7.5rem;justify-items:center;width:100%}.home-page__grid{display:grid;grid-template-areas: 'header' 'image1' 'text1' 'image2' 'image3' 'text2';gap:1.5rem;padding:1rem;width:min(100%,90rem)}.home-page__grid>:nth-child(1){grid-area:header}.home-page__grid>:nth-child(2){grid-area:image1}.home-page__grid>:nth-child(3){grid-area:text1}.home-page__grid>:nth-child(4){grid-area:image2}.home-page__grid>:nth-child(5){grid-area:image3}.home-page__grid>:nth-child(6){grid-area:text2}@media(min-width: 48rem){.home-page__grid{grid-template:"text1 image1 image1" auto "image2 image2 image3" auto "image2 image2 text2" 1fr/40% 1fr 40%}}@media(min-width: 80rem){.home-page__grid{grid-template:"text1 image1 image1" auto "image2 image2 image3" auto "image2 image2 text2" 1fr/40% 1fr 40%}}.home-page__grid-text{display:grid;gap:1.5rem}@media(min-width: 48rem){.home-page__grid-text{align-self:center;align-content:center;padding:1.75rem;height:100%}}.home-page__grid-text--black{background-color:var(--clr-black);padding:3rem 1.5rem}.home-page__grid-text--black>*{color:var(--clr-white)}.home-page__grid-image{width:100%}.location{display:grid;grid-template-rows:max-content 1fr}.location__header{position:absolute;place-self:start}@media(min-width: 48rem){.location__header{margin-left:5%}}@media(min-width: 80rem){.location__header{margin-left:10%}}.location__map{width:100%}.location__details{display:grid;justify-items:center;background-color:var(--clr-black)}.location__details-grid{display:grid;gap:4.25rem;width:min(100%,130rem);padding:3rem 1rem}@media(min-width: 48rem){.location__details-grid{grid-template:1fr/max-content 1fr;padding:5.5rem 2.5rem}}@media(min-width: 80rem){.location__details-grid{gap:14rem;padding:6.5rem 10rem}}.location__details-header{color:var(--clr-white)}.location__details-body{display:grid;gap:1.25rem;color:var(--clr-white)}.hero{display:grid;gap:2rem;justify-items:center;width:100%}@media(min-width: 48rem){.hero{grid-template:1fr/1fr 1fr;gap:0}}@media(min-width: 80rem){.hero{grid-template:1fr/1fr auto 1fr;height:100vh}}.hero::before{content:"";background-color:var(--clr-black);grid-area:1/1;display:block;width:100%;height:100%}.hero__text{display:grid;gap:1rem;padding:0 1rem;grid-area:2/1}@media(min-width: 48rem){.hero__text{align-content:center;gap:3rem;margin-left:-15%;padding-right:2.5rem;grid-area:1/2}}@media(min-width: 80rem){.hero__text{grid-area:1/1/1/4;grid-template-columns:35% 30%;gap:40%;margin:0;padding:unset;width:min(80%,80rem)}}@media(min-width: 160rem){.hero__text{width:95rem}}@media(min-width: 80rem){.hero__header{color:var(--clr-white);mix-blend-mode:difference}}.hero__right-column{display:grid;gap:2rem;justify-items:flex-start}@media(min-width: 48rem){.hero__right-column{gap:3rem}}.hero__image{width:100%;grid-area:1/1}@media(min-width: 80rem){.hero__image{width:auto;height:100vh;grid-area:1/2}}.button{display:flex;justify-items:center;color:var(--clr-white);background-color:var(--clr-black);transition:background-color .3s ease-in}.button__text{padding:1.5rem 2rem;height:100%;background-color:var(--clr-black);transition:background-color .075s ease-in}.button:hover .button__text{background-color:var(--clr-main-color-brown)}.button__arrow{height:100%;padding:1.5rem;background-color:var(--clr-main-color-brown);transition:background-color .075s ease-in}.button:hover .button__arrow{background-color:var(--clr-black)}.footer{background-color:var(--clr-black);color:var(--clr-white);width:100%;display:flex;justify-content:center}.footer__content{display:grid;gap:2.25rem;padding:3rem 2rem;justify-content:center;width:min(100%,130rem)}@media(min-width: 48rem){.footer__content{grid-template-columns:max-content 20rem 1fr;gap:4rem}}@media(min-width: 80rem){.footer__content{grid-template-columns:max-content 30rem 1fr;padding:5rem 10rem;gap:8rem}}.footer__logo{width:7rem}@media(min-width: 80rem){.footer__logo{width:10rem}}.footer__socials{display:flex;gap:1rem}@media(min-width: 48rem){.footer__socials{justify-self:flex-end}}.footer__socials>*{height:max-content;color:var(--clr-white)}.footer__socials>*:hover{color:var(--clr-main-color-brown)}.footer__socials--black>*{color:var(--clr-black)}.footer__socials--black>*:hover{color:var(--clr-white)}.footer--brown{color:var(--clr-black);background-color:var(--clr-main-color-brown)}/*# sourceMappingURL=main.css.map */
