--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -1,16 +1,83 @@
+@use '../abstract' as a;
+
 .hero {
   display: grid;
   gap: 2rem;
+  justify-items: center;
+  width: 100%;
+
+  @include a.breakpoint(medium) {
+    grid-template: 1fr / 1fr 1fr;
+    gap: 0;
+  }
+
+  @include a.breakpoint(large) {
+    grid-template: 1fr / 1fr auto 1fr;
+    height: 100vh;
+  }
+
+  &::before {
+    content: '';
+    background-color: var(--clr-black);
+    grid-area: 1 / 1;
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 
   &__text {
     display: grid;
     gap: 1rem;
     padding: 0 1rem;
+    grid-area: 2 / 1;
+
+    @include a.breakpoint(medium) {
+      align-content: center;
+      gap: 3rem;
+      margin-left: -15%;
+      padding-right: 2.5rem;
+      grid-area: 1 / 2;
+    }
+
+    @include a.breakpoint(large) {
+      grid-area: 1 / 1 / 1/ 4;
+      grid-template-columns: 35% 30%;
+      gap: 40%;
+      margin: 0;
+      padding: unset;
+      width: min(80%, 80rem);
+    }
+    
+    @include a.breakpoint(x-large) {
+      width: 95rem;
+    }
+  }
+  
+  &__header {
+    @include a.breakpoint(large) {
+      color: var(--clr-white);
+      mix-blend-mode: difference;
+    }
   }
 
   &__right-column {
     display: grid;
     gap: 2rem;
     justify-items: flex-start;
+
+    @include a.breakpoint(medium) {
+      gap: 3rem;
+    }
+  }
+
+  &__image {
+    width: 100%;
+    grid-area: 1 / 1;
+
+    @include a.breakpoint(large) {
+      width: auto;
+      height: 100vh;
+      grid-area: 1 / 2;
+    }
   }
 }
