--- a/assets/scss/layout/_home-page.scss
+++ b/assets/scss/layout/_home-page.scss
@@ -3,10 +3,13 @@
 .home-page {
   display: grid;
   gap: 7.5rem;
+  justify-items: center;
 
   &__content {
     display: grid;
     gap: 7.5rem;
+    justify-items: center;
+    width: 100%;
   }
 
   &__grid {
@@ -14,10 +17,45 @@
     @include a.set-grid-areas(header, image1, text1, image2, image3, text2);
     gap: 1.5rem;
     padding: 1rem;
+    width: min(100%, 90rem);
+
+    @include a.breakpoint(medium) {
+      grid-template:
+              'text1 image1 image1' auto
+              'image2 image2 image3' auto
+              'image2 image2 text2' 1fr / 40% 1fr 40%;
+    }
+
+    @include a.breakpoint(large) {
+      grid-template:
+              'text1 image1 image1' auto
+              'image2 image2 image3' auto
+              'image2 image2 text2' 1fr / 40% 1fr 40%;
+    }
   }
 
   &__grid-text {
     display: grid;
     gap: 1.5rem;
+
+    @include a.breakpoint(medium) {
+      align-self: center;
+      align-content: center;
+      padding: 1.75rem;
+      height: 100%;
+    }
+
+    &--black {
+      background-color: var(--clr-black);
+      padding: 3rem 1.5rem;
+      
+      & > * {
+        color: var(--clr-white);
+      }
+    }
+  }
+
+  &__grid-image {
+    width: 100%;
   }
 }
